fix evaluator output error

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 processing/*
 recordings/*
+popen-test/*
 spectrograms/*
 dataset/relaxed/*
 dataset/tense/*
@@ -7,3 +8,4 @@ normalised-dataset/relaxed/*
 normalised-dataset/tense/*
 *.wav
 log.txt
+popen.rb
